# dbcflatten

./: LICENSE  README.md  dbcflatten.cabal  stack.yaml
app/: Main.hs
src/Notebook/: Databricks.hs  Utils.hs
